RESOLVED FIXED294854
Newly added observers are not unregistered from WebProcessPoolCocoa.mm
https://bugs.webkit.org/show_bug.cgi?id=294854
Summary Newly added observers are not unregistered from WebProcessPoolCocoa.mm
Mike Wyrzykowski
Reported 2025-06-23 10:41:19 PDT
[WebGPU] newly added observers are not unregistered from WebProcessPoolCocoa.mm
Attachments
Mike Wyrzykowski
Comment 1 2025-06-23 10:41:45 PDT
Mike Wyrzykowski
Comment 2 2025-06-23 10:43:57 PDT
Mike Wyrzykowski
Comment 3 2025-06-23 13:51:33 PDT
Updating title, this is not related to WebGPU, accidentally added that to the title by habit
EWS
Comment 4 2025-06-23 15:00:25 PDT
Committed 296533@main (83b975c8c48d): <https://commits.webkit.org/296533@main> Reviewed commits have been landed. Closing PR #47074 and removing active labels.
Mike Wyrzykowski
Comment 5 2025-06-23 15:56:16 PDT
*** Bug 294862 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.