[WebGPU] newly added observers are not unregistered from WebProcessPoolCocoa.mm https://bugs.webkit.org/show_bug.cgi?id=294854 rdar://154044395

Reviewed by Aditya Keerthi.

296453@main added two new observers but never unregistered them.

* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::registerNotificationObservers):
(WebKit::WebProcessPool::unregisterNotificationObservers):
* Source/WebKit/UIProcess/WebProcessPool.h:

Canonical link: https://commits.webkit.org/296533@main